# flux-transfer

./: .gitignore
api/: Cargo.toml
api/src/: api.rs  config.rs  ip.rs  main.rs  structure.rs
ui/: package.json
ui/app/: layout.tsx  page.tsx
ui/app/api/transfer/: route.ts
ui/app/destinations/: page.tsx
ui/app/destinations/add/: page.tsx
ui/app/destinations/edit/[name]/: page.tsx
ui/app/transfer/: page.tsx
ui/components/: box.module.tsx  button.tsx  dropdown.module.tsx  header-wrapper.tsx  header.tsx
