[package]
name = "transfer"
version = "0.1.0"
edition = "2024"
authors = ["The Transfer Contributors"]
description = "A secure, simple and local File Transfer Protocol"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
log = "0.4.20"
env_logger = "0.11.2"
anyhow = "1.0.79"
serde_json = "1.0.113"
bytes = "1.5.0"
once_cell = "1.19.0"